--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <script src="index.js"></script>
+    <script src="chapter-3.Objects.js"></script>
+    <script src="chapter-4.Functions.js"></script>
 </body>
 </html>
